# crocodile

./: .gitattributes  .gitignore  .ve_path  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  _pyproject.toml  _setup.py  build_and_publish.sh  crocodile.code-workspace  justfile  matplotlib.ipynb  model.gv  mypy.ini  packaging_notes.txt  prediction_model.onnx  pyproject.toml  requirements.txt  setup.py  toolbox.py  truckconfig.json  tutorial.ipynb  tutorial2.ipynb  tutorial_matplotlib.ipynb
.cursor/rules/: python_dev.mdc
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml
archive/: history.py
docs/: alexlib.rst  conf.py  crocodile.comms.rst  crocodile.core_modules.rst  crocodile.deeplearning_helpers.rst  crocodile.deeplearning_torch_helpers.rst  crocodile.file_management_helpers.rst  crocodile.meta_helpers.rst  crocodile.msc.rst  crocodile.rst  index.rst  modules.rst  myresources.alexlib.rst  myresources.rst
myresources/alexlib/: __init__.py  deeplearning.py  deeplearning_torch.py  history.py  miscellaneous.py  toolbox.py
myresources/crocodile/: .pylintrc  __init__.py  archive.py  core.py  croshell.py  database.py  deeplearning.py  deeplearning2.py  deeplearning_df  deeplearning_df.py  deeplearning_pytorch_template.py  deeplearning_template.py  deeplearning_torch.py  deeplearning_torch2.py  deeplearning_v1.py  dl_template.py  enviroment.py  environment.py  file_management.py  history.py  imagesc.py  matplotlib_management.py  meta.py  miscellaneous.py  path_m.py  plot_management.py  plotly_management.py  run.py  toolbox.py  turbo_cmap.py
myresources/crocodile/art/: __init__.py  croco_caliography_1  croco_caliography_2  fat_croco  halfwit_croco  happy_croco  water_croco
myresources/crocodile/cluster/: cloud_manager.py  controllers.py  data_transfer.py  distribute.py  file_manager.py  gui.py  job_params.py  loader_runner.py  meta_handling.py  remote_machine.py  run.py  script_execution.py  script_notify_upon_completion.py  self_ssh.py  session_managers.py  template.py  template_cluster.py  template_gooey.py  template_textual.py  template_tui.py  template_tui2.py  trial_file.py  utils.py
myresources/crocodile/cluster/templates/: cli_click.py  cli_gooey.py  cli_trogon.py  f.py  run_cloud.py  run_cluster.py  run_remote.py  utils.py
myresources/crocodile/comms/: __init__.py  cloud.py  gdrive.py  gh_style.css  helper_funcs.py  notification.py  onedrive.py
myresources/crocodile/core_modules/: core_1.py  core_2.py  core_3.py  core_4.py
myresources/crocodile/deeplearning_torch_helpers/: dl2.py  onnx_exp01_baseline.py  onnx_exp02_opts_threads.py  onnx_exp03_io_binding.py  onnx_exp04_sequential.py  onnx_exp05_wider_model.py  onnx_trial.py
myresources/crocodile/file_management_helpers/: file1.py  file2.py  file3.py  file4.py  file5.py
myresources/crocodile/meta_helpers/: meta1.py  meta11.py  meta2.py  meta3.py  meta4.py  meta5.py
myresources/crocodile/msc/: ascii_art.py  boxes.py  df_tutorial.py  dl_template.py  history.py  in_memory_db_trial.py  miscellaneous.py  numerical.py  obfuscater.py  odds.py  yt_download.py  yt_merge.py
myresources/crocodile/sql_archive/: connect_to_sql.py  main.py  servers.py
tests/: deeplearning.py  file_management.py  test_base.py  toolbox_test.py
tst/: deb.py  deeplearning.py  file_management.py  test_base.py  toolbox_test.py
tst/cluster/: distribute.py  remote_machine.py
tutorials/: tutorial.ipynb  tutorial2.ipynb  tutorial_matplotlib.ipynb
