[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crocodile"
version = "14.3"  # Version directly defined here instead of using dynamic
description = "Deep Learning Framework & Workload Management For On-premise Personal Machines."
readme = "README.md"
authors = [
    {name = "Alex Al-Saffar", email = "programmer@usa.com"}
]
requires-python = ">=3.10"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # CORE
    "numpy",
    "pandas",
    "tabulate",
    "matplotlib",
    "plotly",
    
    # Dataframe serialization
    "pyarrow",
    "fastparquet",
    
    # Accessories
    "rich",
    "tabulate",
    "randomname",
    "psutil",
    "joblib",
    "ipython",
    "fire",
    "tqdm",
    "tomli",
    "pyyaml",
    "pyjson5",
    "dill",
    "cryptography",
    "paramiko",
    "requests",
    "colorlog",
    "sqlalchemy",
    "bcrypt",
    "distro",
    "send2trash",
    "py7zr",
    "gitpython",
    "clipboard",
]

[project.urls]
"Homepage" = "https://github.com/thisismygitrepo/crocodile"
"Bug Tracker" = "https://github.com/thisismygitrepo/crocodile/issues"
"Documentation" = "https://crocodile.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/thisismygitrepo/crocodile"
"PyPI" = "https://pypi.org/project/crocodile"

[project.optional-dependencies]
full = [
    "tensorflow",
    "torch",
    "keras",
    "scikit-learn",
    "click",
    "types-requests",
    "types-paramiko",
    "types-tqdm",
]

[tool.setuptools]
package-dir = {"" = "myresources"}
py-modules = [
    "crocodile.core",
    "crocodile.croshell",
    "crocodile.database",
    "crocodile.deeplearning",
    "crocodile.deeplearning_template",
    "crocodile.deeplearning_df",
    "crocodile.deeplearning_torch",
    "crocodile.environment",
    "crocodile.file_management",
    "crocodile.matplotlib_management",
    "crocodile.meta",
    "crocodile.plotly_management",
    "crocodile.toolbox",
    "crocodile.comms.helper_funcs",
    "crocodile.comms.notification",
    "crocodile.comms.onedrive",
    "crocodile.msc.ascii_art",
    "crocodile.msc.dl_template",
    "crocodile.msc.numerical",
    "crocodile.msc.odds"
]

[tool.setuptools.packages.find]
where = ["myresources"]
include = ["crocodile*"]

[tool.setuptools.package-data]
"crocodile" = ["art/*"]

# Additional metadata
[tool.crocodile]
release_date = "2025-04-17"
release_notes = """
Minor changes
"""
