[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crocodile"
version = "14.3"  # Version directly defined here instead of using dynamic
description = "Deep Learning Framework & Workload Management For On-premise Personal Machines."
readme = "README.md"
authors = [
    {name = "Alex Al-Saffar", email = "programmer@usa.com"}
]
requires-python = ">=3.10"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "bcrypt>=4.3.0",
    "clipboard>=0.0.4",
    "colorlog>=6.9.0",
    "cryptography>=44.0.2",
    "dill>=0.3.9",
    "distro>=1.9.0",
    "fastparquet>=2024.11.0",
    "fire>=0.7.0",
    "gitpython>=3.1.44",
    "ipython>=8.35.0",
    "joblib>=1.4.2",
    "keras>=3.9.2",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "paramiko>=3.5.1",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "psutil>=7.0.0",
    "py7zr>=0.22.0",
    "pyarrow>=19.0.1",
    "pyjson5>=1.6.8",
    "pyyaml>=6.0.2",
    "randomname>=0.2.1",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "send2trash>=1.8.3",
    "sqlalchemy>=2.0.40",
    "tabulate>=0.9.0",
    "tensorflow>=2.19.0",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
]

[project.urls]
"Homepage" = "https://github.com/thisismygitrepo/crocodile"
"Bug Tracker" = "https://github.com/thisismygitrepo/crocodile/issues"
"Documentation" = "https://crocodile.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/thisismygitrepo/crocodile"
"PyPI" = "https://pypi.org/project/crocodile"

[project.optional-dependencies]
full = [
    # "tensorflow",
    # "keras",
    "scikit-learn>=1.6.1",
    "click>=8.1.8",
    "torch>=2.6.0",
    "types-paramiko>=3.5.0.20240928",
    "types-requests>=2.32.0.20250328",
    "types-tqdm>=4.67.0.20250404",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0"
]

[tool.setuptools]
package-dir = {"" = "myresources"}
py-modules = [
    "crocodile.core",
    "crocodile.croshell",
    "crocodile.database",
    "crocodile.deeplearning",
    "crocodile.deeplearning_template",
    "crocodile.deeplearning_df",
    "crocodile.deeplearning_torch",
    "crocodile.environment",
    "crocodile.file_management",
    "crocodile.matplotlib_management",
    "crocodile.meta",
    "crocodile.plotly_management",
    "crocodile.toolbox",
    "crocodile.comms.helper_funcs",
    "crocodile.comms.notification",
    "crocodile.comms.onedrive",
    "crocodile.msc.ascii_art",
    "crocodile.msc.dl_template",
    "crocodile.msc.numerical",
    "crocodile.msc.odds"
]

[tool.setuptools.packages.find]
where = ["myresources"]
include = ["crocodile*"]

[tool.setuptools.package-data]
"crocodile" = ["art/*"]

# Additional metadata
[tool.crocodile]
release_date = "2025-04-17"
release_notes = """
Minor changes
"""
